[tool.poetry]
name = "crawler-clouds"
version = "0.1.0"
description = ""
authors = ["Alexandre Tomy <ale.tomy1996@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
lxml = "^4.5.2"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
rope = "^0.17.0"
autopep8 = "^1.5.3"

[tool.poetry.scripts]
crawler-clouds = "crawler_clouds.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
